# Fcatbot

./: .gitignore  LICENSE  LibraryManager.py  README.md  __init__.py  __main__.py  client.py  command.py  config.py  debugger.py  pyproject.toml  requirements.txt  setup.py  test-RBACManager.py
DataModels/: __init__.py  status.py
DataModels/message/: Base.py  Group.py  MessageChain.py  Nope.py  Private.py  __init__.py
PluginSystem/: base_plugin.py  compatible.py  custom_err.py  event.py  loader.py  secure.py
RBACManager/: RBACManager.py  Role.py  Trie.py  User.py  __init__.py
command/: __init__.py
data_models/: __init__.py
data_models/message/: __init__.py  base_message.py  group_message.py  message_chain.py  message_nope.py  meta_event.py  notice_event.py  private_message.py  request_event.py
data_models/message/doc/: message.md  meta.md  request.md
docs/API参考/: 事件系统.md  消息链.md
docs/开发指南/: 开始开发.md  插件开发.md
docs/快速使用/: 安装.md
http/: __init__.py  client.py  tip.text
http/api/: __init__.py  group.py  message.py  system.py  user.py
models/: __init__.py
models/message/: Base.py  Group.py  MessageChain.py  Nope.py  Private.py  __init__.py
plugin_sys/: base_plugin.py  compatible.py  custom_err.py  event.py  loader.py  secure.py
plugin_system/: abc.py  abc_api.py  api.py  base_plugin.py  compatible.py  custom_err.py  event.py  loader.py  loader_mixin.py  plugin_mixins.py  pluginsys_err.py
plugin_system/event/: event.py  event_bus.py
plugin_system/plugin_funcs/: __init__.py  abc_api.py  event_bus_api.py  event_func_api.py  queue.py  time_task_api.py
plugins/: __init__.py  abc.py  base_plugin.py  compatible.py  event_bus.py  loader.py  manager.py
plugins/mixin/: __init__.py  base.py  config.py  event_bus.py  server.py
rbac_manager/: RBACManager.py  RBAC_manager.py  Trie.py  __init__.py  models.py  permission_parser.py  permission_tree.py  permission_trie.py
test/: LibraryManager.py  LibraryManager_test.py  MessageChain_test.py  MessageChain_tesy.py  RBACManager_test.py  test-RBACManager.py  tips.txt  universal_data_IO_test.py
test/plugins/ExamplePlugin/: __init__.py  main.py
utils/: BaseUI.py  ChangeDir.py  Logger.py  PipTool.py  Test_suite.py  UiEngine.py  UniversalDataIO.py  Visualize.py  __init__.py  change_dir.py  color.py  deprecated.py  logger.py  teat.py  test_uniloader.py  time_task_scheduler.py  universal_data_IO.py  visualize_data.py
utils/uniloader/: __init__.py  codec.py  data_types.py  io_drivers.py  serializers.py  uniloader.py
utils_/: Ui_engine.py  base_Ui.py  logger.py
webclient/: __init__.py  ncatbot_client.py  wsclient.py
webclient/api/: group.py  message.py  system.py  user.py
ws/: __init__.py  client.py  handler.py
ws/api/: __init__.py  group.py  message.py  system.py  user.py
